[package]
name = "literium"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
description = "Literium WEB-framework server support library"

[dependencies]
futures = "0.1"
tokio = "0.1"
url = "1.7"
http = "0.1"
hyper = "0.12"
sodiumoxide = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.8"
serde_json = "1.0"
serde_qs = "0.4"
base64 = "0.9"
hex = "0.3"
bytes = { version = "0.4", features = ["serde"] }
byteorder = "1.2"
time = "0.1"
log = "0.4"
